kubernetes/aks/series_2_network_mgmnt/part_4_istio/examples/dgraph/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dgraph-allow-istio
  namespace: dgraph
spec:
  podSelector:
    matchLabels:
      app: dgraph
      component: alpha
  ingress:
    # allow access to any pod in the same namespace
    - from:
        - podSelector: {}
    # allow only pods from any namespace that are part of service mesh
    - from:
        - namespaceSelector:
            matchLabels:
              istio-injection: enabled
          podSelector: {}
      ports:
        - port: 9080
        - port: 8080
